--- a/ciencias/PROGRESSUS/studia.html
+++ b/ciencias/PROGRESSUS/studia.html
@@ -130,7 +130,7 @@
               saludar, preguntar etc. <br>Contacto con el idioma a través de tus intereses: series, cocina, deporte,
               tecnología. <br>Iniciar con las frases más usadas en el uso diario <br>Anotar las preguntas recurrentes o las más importantes
             <br></li>
-            <li>Siempre en todo la busqueda de herramientas que optimicen el aprendizaje es fundamental. <br> Diversidad
+            <li>Siempre en todo la búsqueda de herramientas que optimicen el aprendizaje es fundamental. <br> Diversidad
               de recursos: usa podcasts, videos, libros, apps, y conversaciones reales para evitar el aburrimiento.</li>
             <li>Sesiones cortas y diarias (30 minutos Máximo) suelen ser más efectivas que sesiones largas esporádicas.
             </li>
@@ -142,9 +142,9 @@
       <li>
         <details class="select">
           <summary>Asentar</summary>
-          <p>Fijar enla memoria de largo plazo</p>
+          <p>Fijar en la memoria de largo plazo</p>
           <ol>
-            <h4>Repaso despuésde:</h4>
+            <h4>Repaso después de:</h4>
             <li>10 minutos</li>
             <li>1 día</li>
             <li>1 semana</li>
@@ -166,7 +166,7 @@
           <h4>Semanas 5–6:</h4> Ampliación de contenido y complejidad <br>
           Ve videos o series con subtítulos en el idioma objetivo. <br>
           Participa en foros o comunidades en línea del idioma. <br>
-          Toma notas de 5–6 frases útiles y úsarlas en ejercicios de speaking. <br>
+          Toma notas de 5–6 frases útiles y usarlas en ejercicios de speaking. <br>
           <h4>Semanas 7–8:</h4> Consolidación y revisión <br>
           Realiza una simulación de conversación de 10–15 minutos sobre temas variados. <br>
           Revisa vocabulario clave y estructuras gramaticales. <br>
@@ -206,7 +206,7 @@
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
-          <summary>Caminrlo domde </summary>
+          <summary> </summary>
           <p></p>
         </details>
       </li>
