--- a/ecclesia/musica/solfeo.html
+++ b/ecclesia/musica/solfeo.html
@@ -183,7 +183,7 @@
         <li>
           <details class="select">
             <summary>Summarium</summary>
-            <a href="../../media/musica/solfeo/SOLFEO Summarium.pdf">
+            <a href="../../media/musica/solfeo/SOLFEO Summarium.pdf" target="_blank">
               Summarium
             </a>
             <p>
