--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -638,7 +638,7 @@
               <ol>
                 <li>Fijar un lugar </li>
                 <li>Un momento al día</li>
-                <li>Buscar de hacer el Bien en todo</li>
+
               </ol>
             </li>
             <li>Ninguna virtud da fruto sin la perseverancia</li>
@@ -788,10 +788,17 @@
               adversidad</li>
             <!-- +++++++++++++++++++++++++++ -->
             <h3>Oración</h3>
-            <li>La oración es el medio supremo, porque nos encontramos con el Fin Último; El objetivo de la oración es
+            <li>La oración es el medio supremo, porque nos encontramos con el Fin Último; El objetivo de la oración es:
               Dios mismo</li>
-            <li>Determinar un: Lugar, hora y medidas de Progreso</li>
+            <li>Determinar un: Lugar, hora y Progreso</li>
             <li>A la Oración Vocal añadir la Oración Mental</li>
+            <li>Oración Vocal <br>
+              En la mañana la oración vocal, oraciones de la iglesia entendiendo lo que se dice <br>
+              En la Noche un examen de conciencia, dando gracias por el bien <br>
+              Y entender que tras cada pecado hay un error doctrinal [Desconocimiento de Dios, la revelación y su
+              Gracia] <br>
+              Que todo error doctrinal siempre nos llevará al pecado.
+            </li>
             <li>No darle importancia a las distracciones, simplemente dejarla y regresar a donde estamos. Con el
               crecimiento de la fe, y la perseverancia recibiremos la Gracia de vencer esas distracciones</li>
             <li>Apartar un momento cada día para la Lectio Divina, (que es también oración) y durante el día reflexionar
@@ -1298,38 +1305,61 @@
       <details class="select">
         <summary>Secunda Mansio</summary>
         <ol>
-          <h3>La Gracia</h3>
+          <h3 class="cita">La Gracia</h3>
           <li>Dios mismo viene a morar en cada persona</li>
           <li>Todo es Gracia, iniciativa gratuita de Dios que revela su Voluntad y me prepara sea para la acción y/o la
             adversidad</li>
-       
-          <h3>La Oración</h3>
-          <li> El fin de la oración es Dios mismo, Es el medio supremo </li>
+          <li>Todas las dimensiones de la Gracia están presentes en cada una de ellas, porque es de Dios. <br> Prima una dimensión sobre las otras en cada persona</li>
+        </ol> <br><hr><br>
+        <!-- +++++++++++++++++++++++++++++++++++++++++++ -->
+        <ol>
+        <h3><i>GRATIA UNITATIS</i></h3>
+        <h3> La Oración</h3>
+          <h4> El fin de la oración es Dios mismo, Es el medio supremo. </h4>
           <li> El primer paso será determinar Lugar y hora </li>
-          <li> A la oración vocal Añadir la oración mental, (La Lectio Divina) <br>
-          Leer el texto de la semana <br>
-          Meditarlo y extraer la Gracia que Dios quiere darme <br>
-          Para El método y la Vida <br>
-            unirlo a las moradas. 
+          <li><b>Oración Vocal </b>
+            <ol>
+              <li>En la mañana oraciones de la iglesia entendiendo lo que se dice </li>
+              <li> En la Noche un examen de conciencia, dando gracias por el bien <br>
+                  Y entender que tras cada pecado hay un error doctrinal [Desconocimiento de Dios, la Revelación y su
+            Gracia] <br>
+            Y Que todo error doctrinal siempre nos llevará al pecado.
+              </li>
+            </ol>
+            <!-- --------------------- -->
           </li>
-          <li> No darle la importancia a las distracciones, con el crecimiento de la fe Y la perseverancia recibiremos la Gracia de no tenerlas </li>
-          <h3>El Bien</h3>
-          <li> El valor de cualquier acción está en que sea La del Señor </li>
-          <li> El enemigo nos dará cien verdades si con eso nos puede hacer caer en una sola mentira </li>
-          <li>Video cor Meum in Quotidianis Actibus Meis</li>
-          <li> Dios se da todo, es el pecado que me impide verlo </li>
-          <li> Toda tentación es precedida por la Gracia Para vencerla Y para crecer. Porque revela la inclinación del corazón </li>
-          <li> Todo pensamiento que no me lleva al Señor es tentación </li>
-          <li> Buscar y acoger la Gracia en la tentación y hacer de la tentación motivo de Gracia </li>
+          <li> A la oración vocal Añadir la oración mental, <b>(La Lectio Divina)</b> 
+            <ol>
+              <li>Leer el texto de la semana</li>
+              <li> Meditarlo y extraer la Gracia que Dios quiere darme. Sea de corrección o crecimiento </li>
+              <li>Conocer a Dios, su Revelación y su Gracia</li>
+              <li>Mejorar el método, la vida y unirlo a las Moradas </li>
+            </ol>
+          </li>
+          <!-- --------------------- -->
+          <li> No darle la importancia a las distracciones, con el crecimiento de la fe Y la perseverancia recibiremos
+            la Gracia de no tenerlas </li>
+        </ol><br><hr><br>
+        <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ -->
+        <ol>
+          <h2><i>GRATIA INCREMENTI</i></h2>
+          <h3>Prooemium</h3>
+          <p><b> Valor: El principio interno</b> <br>
+- Es una creencia profunda sobre lo que es correcto, importante o deseable. <br>
+- Los valores guían nuestras decisiones y nos dan propósito.</p>
+<p> <b>Actitud: La expresión del valor </b> <br>
+- Es la disposición interna que mostramos ante personas, situaciones o ideas.</p>
 
+<!-- ------------------------------------ -->
           <h3>La Perseverancia</h3>
-          <li>Ninguna virtud da fruto sin la Perseverancia</li>
-          <li>La Gracia de la perseverancia, Necesita de la fe, esperanza y caridad</li>
-          <li> La perseverancia es necesaria A todas las virtudes </li>
+          <p> La Perseverancia es necesaria A todas las virtudes.Ninguna virtud da fruto sin ella </p>
+          <p>La Gracia de la Perseverancia, Necesita de la fe, esperanza y caridad</p>
           <h5><i>La Actitud</i></h5>
           <li> Las actitudes permanecen si se convierten en acciones </li>
           <li>Las acciones son verdaderas si brotan de las actitudes </li>
           <li> La actitud es lo que le da valor espiritual a la acción </li>
+          <li>Hacer de la Perseverancia un hábito</li>
+          <!-- ------------------------------------ -->
           <h5><i>La Paciencia</i></h5>
           <li> Es la virtud Que trata de conocer los tiempos y procesos </li>
           <h5><i>La Prudencia</i></h5>
@@ -1339,6 +1369,7 @@
             La justicia puede volverse rigidez <br>
             La fortaleza puede volverse temeridad <br>
             La caridad puede volverse ingenuidad o permisividad</li>
+            <!-- ------------------------------------ -->
           <li>La prudencia:<br>
             mira la realidad concreta<br>
             reconoce las mociones interiores<br>
@@ -1372,7 +1403,20 @@
             </ol>
           </li>
           <li>Cuando Dios está en primer lugar, todo encuentra su lugar</li>
-     
+
+
+          <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ -->
+          <h2><i>GRATIA AMORIS</i></h2>
+          <h3>El Bien</h3>
+          <li> El valor de cualquier acción está en que sea La del Señor </li>
+          <li> El enemigo nos dará cien verdades si con eso nos puede hacer caer en una sola mentira </li>
+          <li>Video cor Meum in Quotidianis Actibus Meis</li>
+          <li> Dios se da todo, es el pecado que me impide verlo </li>
+          <li> Toda tentación es precedida por la Gracia Para vencerla Y para crecer. Porque revela la inclinación del
+            corazón </li>
+          <li> Todo pensamiento que no me lleva al Señor es tentación </li>
+          <li> Buscar y acoger la Gracia en la tentación y hacer de la tentación motivo de Gracia </li>
+
 
         </ol>
       </details>
