--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -37,7 +37,7 @@
     <div>
       <H2>ENLACES A TEMAS</H2>
       <ol>
-        <li class="li"><a href="#INTRO">INTRO</a></li>
+        <li class="li"><a href="#INTRO">Prooemium</a></li>
         <li class="li"><a href="#MORADA1">MORADA1</a></li>
         <li class="li"><a href="#MORADA2">MORADA2</a></li>
         <li class="li"><a href="#MORADA3">MORADA3</a></li>
@@ -50,7 +50,7 @@
   </section>
   <!-- ++++++++++++++++++++++++++++++++++++++++++++++++ -->
   <section id="INTRO">
-    <h2 class="subtitulo">Introducción</h2>
+    <h2 class="subtitulo">Prooemium</h2>
     <!-- /////////////////////////////////////// -->
     <ol>
       <li>
@@ -1309,26 +1309,27 @@
           <li>Dios mismo viene a morar en cada persona</li>
           <li>Todo es Gracia, iniciativa gratuita de Dios que revela su Voluntad y me prepara sea para la acción y/o la
             adversidad</li>
-          <li>Todas las dimensiones de la Gracia están presentes en cada una de ellas, porque es de Dios. <br> Prima una dimensión sobre las otras en cada persona</li>
-        </ol> <br><hr><br>
+          <li>Todas las dimensiones de la Gracia están presentes en cada una de ellas</li>
+        </ol> <br>
+        <hr><br>
         <!-- +++++++++++++++++++++++++++++++++++++++++++ -->
         <ol>
-        <h3><i>GRATIA UNITATIS</i></h3>
-        <h3> La Oración</h3>
+          <h3><i>GRATIA UNITATIS</i></h3>
+          <h3> La Oración</h3>
           <h4> El fin de la oración es Dios mismo, Es el medio supremo. </h4>
           <li> El primer paso será determinar Lugar y hora </li>
           <li><b>Oración Vocal </b>
             <ol>
               <li>En la mañana oraciones de la iglesia entendiendo lo que se dice </li>
               <li> En la Noche un examen de conciencia, dando gracias por el bien <br>
-                  Y entender que tras cada pecado hay un error doctrinal [Desconocimiento de Dios, la Revelación y su
-            Gracia] <br>
-            Y Que todo error doctrinal siempre nos llevará al pecado.
+                Y entender que tras cada pecado hay un error doctrinal [Desconocimiento de Dios, la Revelación y su
+                Gracia] <br>
+                Y Que todo error doctrinal siempre nos llevará al pecado.
               </li>
             </ol>
             <!-- --------------------- -->
           </li>
-          <li> A la oración vocal Añadir la oración mental, <b>(La Lectio Divina)</b> 
+          <li> A la <b>Oración Vocal</b> Añadir la <b>Oración Mental</b>, <b>(La Lectio Divina)</b>
             <ol>
               <li>Leer el texto de la semana</li>
               <li> Meditarlo y extraer la Gracia que Dios quiere darme. Sea de corrección o crecimiento </li>
@@ -1339,73 +1340,83 @@
           <!-- --------------------- -->
           <li> No darle la importancia a las distracciones, con el crecimiento de la fe Y la perseverancia recibiremos
             la Gracia de no tenerlas </li>
-        </ol><br><hr><br>
+        </ol><br>
+        <hr><br>
         <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <ol>
           <h2><i>GRATIA INCREMENTI</i></h2>
           <h3>Prooemium</h3>
-          <p><b> Valor: El principio interno</b> <br>
-- Es una creencia profunda sobre lo que es correcto, importante o deseable. <br>
-- Los valores guían nuestras decisiones y nos dan propósito.</p>
-<p> <b>Actitud: La expresión del valor </b> <br>
-- Es la disposición interna que mostramos ante personas, situaciones o ideas.</p>
+          <p><b> Valor: Principio moral <br> Es el ideal o bien que se reconoce como digno.</b> <br>
+            - Es una creencia profunda sobre lo que es correcto, importante o deseable. <br>
+            - Los valores guían nuestras decisiones y nos dan propósito.</p>
+            <p> <b>Actitud: Manifestación concreta <br>Es la capacidad estable de actuar conforme al valor. </b> <br>
+              - Es la disposición interna que mostramos ante personas, situaciones o ideas.</p>
+            - Las actitudes permanecen si se convierten en acciones <br>
+            - Las acciones son verdaderas si brotan de las actitudes y valores. <br>
+            - La actitud, como reflejo del Valor, es lo que define a la acción. <br>
+            - Hacer de la Perseverancia un hábito  <br><br>
+            <b>Hábito: Actitud repetida <br>Es la capacidad estable de actuar conforme al valor de manera natural. </b><br>
+            habitus viene del latín habere (“tener”, “poseer”). <br>
+            - “Disposición estable que inclina a obrar de un modo determinado, fácilmente, con gusto y constancia.”
+            <p>
 
-<!-- ------------------------------------ -->
+
+          </p>
+          <!-- ------------------------------------ -->
           <h3>La Perseverancia</h3>
           <p> La Perseverancia es necesaria A todas las virtudes.Ninguna virtud da fruto sin ella </p>
           <p>La Gracia de la Perseverancia, Necesita de la fe, esperanza y caridad</p>
-          <h5><i>La Actitud</i></h5>
-          <li> Las actitudes permanecen si se convierten en acciones </li>
-          <li>Las acciones son verdaderas si brotan de las actitudes </li>
-          <li> La actitud es lo que le da valor espiritual a la acción </li>
-          <li>Hacer de la Perseverancia un hábito</li>
           <!-- ------------------------------------ -->
           <h5><i>La Paciencia</i></h5>
-          <li> Es la virtud Que trata de conocer los tiempos y procesos </li>
+          <li> Es la virtud Que trata de conocer los tiempos y procesos. Y esperar activamente en consecuencia. <br> [Etimológicamente, patientia viene del latín patior (“sufrir”, “soportar”)]  </li>
+          <h5>Criterios de que es Cristiana</h5>
+          <li>Se ordena al bien <br>No es resignación ni indiferencia, sino una elección libre de soportar el mal por un bien mayor (la fidelidad, la justicia, la caridad). Heb 12,2</li>
+          <li>Está unida a la esperanza <br>El paciente no desespera, confía en la acción de Dios en el tiempo.</li>
+          <li>Brota del amor <br>Soporta no por orgullo o miedo, sino por amor: al prójimo, a la verdad o a Dios.</li>
+          <!-- ------------------------------------------ -->
           <h5><i>La Prudencia</i></h5>
           <li>La virtud que toma un principio general y lo aplica correctamente a una situación concreta</li>
           <li>Discierne el bien que hay que hacer “aquí y ahora”, conecta la verdad con la vida.</li>
-          <li>Guía al resto de las virtudes a la acción correcta. <br>Sin prudencia:
-            La justicia puede volverse rigidez <br>
-            La fortaleza puede volverse temeridad <br>
-            La caridad puede volverse ingenuidad o permisividad</li>
-            <!-- ------------------------------------ -->
-          <li>La prudencia:<br>
-            mira la realidad concreta<br>
-            reconoce las mociones interiores<br>
-            evalúa el fruto espiritual<br>
-            elige lo que más conduce al amor de Dios</li>
-          <li>La prudencia es la virtud que convierte el deseo de hacer el bien en una acción realmente buena.</li>
-          <h3>El Método</h3>
-          <li>Tener muy claro el objetivo</li>
-          <li>Método: un conjunto de pasos, reglas o procedimientos sistemáticos y organizados que se siguen para lograr
-            un objetivo específico, resolver un problema o investigar una cuestión.</li>
-          <li>Es una guía estructurada que indica qué hacer, en qué orden y con qué criterios, para obtener resultados
+          <li>Guía al resto de las virtudes a la acción correcta. <br>Sin prudencia: <br>
+            - La justicia puede volverse rigidez <br>
+            - La fortaleza puede volverse temeridad <br>
+            - La caridad puede volverse ingenuidad o permisividad</li>
+            - Elige lo que más conduce al amor de Dios
+              <li>La prudencia es la virtud que convierte el deseo de hacer el bien en una acción realmente buena.</li>
+              <!-- ------------------------------------ -->
+          <h5>El Método</h5>
+          <p>Método: un conjunto de pasos, reglas o procedimientos sistemáticos y organizados que se siguen para lograr un fin</p>
+          <li>Es una guía estructurada que indica qué hacer, en qué orden y con qué criterios, para obtener resultados</li>
+          <li>Tener muy claro el Fin</li>
+             <li>Un objetivo específico, resolver un problema o investigar una cuestión.</li>
             reproducibles.</li>
-          <li>Características esenciales de un método <br>
-
-            Propósito definido: objetivo claro que se persigue <br>
-            Secuencia de pasos: orden lógico y planificado de acciones.<br>
-            Principios y reglas: fundamentos que orientan las decisiones durante el proceso.<br>
-            Reproducibilidad: capacidad de ser aplicado por otros para obtener resultados similares.</li>
-          <!-- +++++++++++++++++++++++++++ -->
+            <h5>Processus</h5>
+          <li> Propósito definido: objetivo claro que se persigue </li>
+          <li>   Secuencia de pasos: orden lógico y planificado de acciones.</li>
+          <li>Principios y reglas: fundamentos que orientan las decisiones durante el proceso</li>
+          <li> Reproducibilidad: capacidad de ser aplicado por otros para obtener resultados similares.</li>
+        <!-- +++++++++++++++++++++++++++ -->
           <h5>El Orden</h5>
           <li>Se caracteriza por discernir las prioridades para la acción del método <br>
             Secuencia de orden:
             <ol>
-              <li>Tomar conciencia del desorden</li>
+              <h5>Método Inicial</h5>
+              <li>Tener muy claro el Fin</li>
+              <li>Un objetivo específico</li>
+              <li>Secuencia de pasos</li>
+              <li>Reproducibilidad</li>
+            <h5>Desarrollo del Método</h5>
+              <li>Tomar conciencia del desorden, es relativo a la secuencia de pasos</li>
               <li>Elegir lo esencial</li>
-              <li>Dar forma exterior al orden [método]</li>
               <li>Comienza con lo pequeño.</li>
               <li>Ayuda a vincular cada acto con un sentido.</li>
-              <li>Refuerza el progreso, no castigues el fallo.</li>
               <li>Vivir el orden con libertad interior [Permanente mejora]</li>
             </ol>
           </li>
           <li>Cuando Dios está en primer lugar, todo encuentra su lugar</li>
-
-
+        </ol>
           <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ -->
+           <ol>
           <h2><i>GRATIA AMORIS</i></h2>
           <h3>El Bien</h3>
           <li> El valor de cualquier acción está en que sea La del Señor </li>
@@ -1416,6 +1427,9 @@
             corazón </li>
           <li> Todo pensamiento que no me lleva al Señor es tentación </li>
           <li> Buscar y acoger la Gracia en la tentación y hacer de la tentación motivo de Gracia </li>
+          <li>Un error doctrinal siempre lleva al pecado [Desconocimiento de Dios, su Revelación y su Gracia] </li>
+          <li>Tras cada pecado o tentación, hay siempre un error doctrinal</li>
+     
 
 
         </ol>
